[skip] Fixed alignment of timeline times on Release events (1m)

--- a/app/assets/stylesheets/application/welcome.scss
+++ b/app/assets/stylesheets/application/welcome.scss
@@ -170,7 +170,7 @@
     text-indent: -57px;
     
     .timeline-event-time {
-      font-size: 0.75em;
+      font-size: 10px;
       text-align: right;
       line-height: 1em;
       position: absolute;
@@ -261,6 +261,10 @@
         font-size: 17px;
         left: 2px;
         top: 2px;
+      }
+      
+      .timeline-event-time {
+        top: 14px;
       }
       
       &::before { top: 19px; width: 8px; }
